--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/gjpataky/HW7/issues"
   },
-  "homepage": "https://github.com/gjpataky/HW7#readme"
+  "homepage": "https://github.com/gjpataky/HW7#readme",
+  "dependencies": {
+    "axios": "^0.19.0",
+    "cheerio": "^1.0.0-rc.3",
+    "html5-to-pdf": "^3.2.0",
+    "inquirer": "^7.0.0",
+    "path": "^0.12.7"
+  }
 }
